/*
Copyright 2021-present Open Networking Foundation.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package atomix.protocol.crdt.counter;

import "gogoproto/gogo.proto";

message RequestHeader {
    uint32 partition_id = 1 [(gogoproto.customname) = "PartitionID", (gogoproto.casttype) = "github.com/atomix/go-framework/pkg/atomix/protocol/crdt.PartitionID"];
    string service = 2;
}

message UpdateRequest {
    RequestHeader header = 1 [(gogoproto.nullable) = false];
    CounterState state = 3 [(gogoproto.nullable) = false];
}

message UpdateResponse {
    CounterState state = 1 [(gogoproto.nullable) = false];
}

message CounterState {
    map<string, uint64> increments = 1;
    map<string, uint64> decrements = 2;
}

service CounterProtocol {
    rpc Update(UpdateRequest) returns (UpdateResponse);
}
